--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,9 @@ dependencies:
   google_maps: ^6.2.0
   intl: ^0.17.0
   url_launcher: ^6.1.3
+#  flutter_carousel_slider: ^1.0.8
   carousel_slider: ^4.1.1
-
+#  scaled_list: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -74,7 +75,7 @@ flutter:
     - assets/images/logo1.png
     - assets/images/production.png
     - assets/images/technology.png
-    - assets/images/kompleks1.png
+    - assets/images/kompleks.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
