--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^6.1.3
 #  flutter_carousel_slider: ^1.0.8
   carousel_slider: ^4.1.1
+  vertical_tabs_flutter: ^1.0.0
 #  scaled_list: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
