--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,13 @@ dependencies:
   video_player: ^2.4.7
   http: ^0.13.4
   flutter_bloc: ^8.0.1
-  provider: ^6.0.3
   google_maps: ^6.2.0
   intl: ^0.17.0
   url_launcher: ^6.1.3
 #  flutter_carousel_slider: ^1.0.8
   carousel_slider: ^4.1.1
   vertical_tabs_flutter: ^1.0.0
+  get: ^4.6.5
 #  scaled_list: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
