--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: binokor_web
-description: A new Flutter project.
+description: ООО "DSK Binikor" лидер по высокотехнологичному производству железобетонных изделий
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -38,11 +38,11 @@ dependencies:
   google_maps: ^6.2.0
   intl: ^0.17.0
   url_launcher: ^6.1.3
-#  flutter_carousel_slider: ^1.0.8
+  #  flutter_carousel_slider: ^1.0.8
   carousel_slider: ^4.1.1
   vertical_tabs_flutter: ^1.0.0
   get: ^4.6.5
-#  scaled_list: ^2.0.0
+  #  scaled_list: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
