--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,29 @@ dependencies:
   syncfusion_flutter_datagrid: ^20.3.50
   syncfusion_flutter_core: ^20.3.50
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+#  flutter_launcher_icons: "^0.11.0"
 
+#flutter_icons:
+#  android: "launcher_icon"
+#  ios: true
+#  image_path: "assets/images/logo1.png"
+#  min_sdk_android: 21 # android min sdk min:16, default 21
+#  web:
+#    generate: true
+#    image_path: "path/to/image.png"
+#    background_color: "#hexcode"
+#    theme_color: "#hexcode"
+#  windows:
+#    generate: true
+#    image_path: "path/to/image.png"
+#    icon_size: 48 # min:48, max:256, default: 48
+#  macos:
+#    generate: true
+#    image_path: "path/to/image.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -77,6 +96,7 @@ flutter:
     - assets/images/logo.png
     - assets/images/logo1.png
     - assets/images/production.png
+    - assets/images/technology.png
     - assets/images/teachers/specialist-1.webp
     - assets/images/teachers/specialist-3.webp
     - assets/images/teachers/specialist-3.webp
