--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,7 @@ flutter:
     - assets/images/logo1.png
     - assets/images/production.png
     - assets/images/technology.png
+    - assets/images/backround.png
     - assets/images/teachers/specialist-1.webp
     - assets/images/teachers/specialist-3.webp
     - assets/images/teachers/specialist-3.webp
