--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   carousel_slider: ^4.1.1
   vertical_tabs_flutter: ^1.0.0
   get: ^4.6.5
+  url_strategy: ^0.2.0
   #  scaled_list: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
