--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   syncfusion_flutter_datagrid: ^20.3.50
   syncfusion_flutter_core: ^20.3.50
+  hovering: ^1.0.4
 
 
 dev_dependencies:
