--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   syncfusion_flutter_datagrid: ^20.3.50
   syncfusion_flutter_core: ^20.3.50
   hovering: ^1.0.4
-
+  marquee: ^2.2.3
 
 dev_dependencies:
   flutter_test:
